# cynewulf

./: Cargo.toml  LICENSE  README.md  rustc-ice-2024-03-06T00_36_47-80917.txt  rustc-ice-2024-03-06T00_42_28-81142.txt  rustc-ice-2024-03-06T01_01_48-83850.txt  rustc-ice-2024-03-06T01_02_11-83901.txt  rustc-ice-2024-03-06T01_23_48-85672.txt  rustc-ice-2024-03-06T01_24_59-85791.txt  rustc-ice-2024-03-17T19_24_45-41316.txt
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/shaders/: shader_galaxy_volume.wgsl  shader_planet_closeup.wgsl  shader_star_closeup.wgsl  shader_star_galaxy.wgsl  shader_territory_overlay.wgsl  star_icon.wgsl  star_instancing.wgsl
src/: camera.rs  camera_control.rs  main.rs  prelude.rs
src/galaxy/: colony.rs  description.rs  empire.rs  empires_placement.rs  fleet.rs  galaxy_config.rs  galaxy_generation.rs  galaxy_index.rs  hypernet.rs  hypernet_pathfinding.rs  mod.rs  navigation_filter.rs  pathfinding.rs  picking_backend.rs  planet.rs  selection.rs  star.rs
src/generators/: empires_placement.rs  galaxy_generation.rs  mod.rs
src/graphics/: draw_galaxy.rs  galaxy_materials.rs  instanced_star_material.rs  instanced_star_pipeline.rs  mod.rs  territory_overlay.rs  ui_materials.rs
src/interface/: empire_outliner.rs  empire_panel.rs  hovered_item_widget.rs  mod.rs  selected_fleet.rs  selection_panel.rs  star_label.rs  time_control.rs  time_widget.rs
src/interface_new/: mod.rs
src/markov_chain/: mod.rs  star_name_generator.rs
src/simulation/: demographics.rs  demography_system.rs  fleet.rs  mod.rs  navigation.rs  time.rs  (+2 more)
(+41 files in other folders)
