[package]
name = "cynewulf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15" }
bevy_framepace = { version = "0.17" }
noisy_bevy = "0.7.0"
delaunator = "1.0.2"
rand = "0.8.5"
petgraph = "0.6.5"
bytemuck = "1.17.0"
